--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Omisoul Portfolio Page Coming Soon</h1>
+    <a href="project0/index.html">CS50W - Project 0</a>
 </body>
 </html>
