--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Omisoul Portfolio Page Coming Soon</h1>
-    <a href="project0/index.html">CS50W - Project 0</a>
+    <h3>Projects</h3>
+    <p>
+        <a href="project0/index.html">CS50W - Project 0</a>
+    </p>>
 </body>
 </html>
